RESOLVED FIXED25093
REGRESSION: some scripts are showing in the Inspector with only "true" as the source
https://bugs.webkit.org/show_bug.cgi?id=25093
Summary REGRESSION: some scripts are showing in the Inspector with only "true" as the...
Timothy Hatcher
Reported 2009-04-08 09:24:11 PDT
Recently some scripts have started to just show "true" as the source. It seems to be eval scripts and anything using the ScriptView class.
Attachments
Fix conversion problem, v1. (1.94 KB, patch)
2009-04-08 10:39 PDT, Dimitri Glazkov (Google)
timothy: review+
Timothy Hatcher
Comment 1 2009-04-08 09:32:09 PDT
Dimitri Glazkov (Google)
Comment 2 2009-04-08 09:32:26 PDT
I think I fixed it in the last commit. It was this: http://trac.webkit.org/changeset/42295/trunk/WebCore/bindings/js/JSInspectorControllerCustom.cpp But I'll check.
Dimitri Glazkov (Google)
Comment 3 2009-04-08 10:39:45 PDT
Created attachment 29338 [details] Fix conversion problem, v1. WebCore/ChangeLog | 12 ++++++++++++ WebCore/inspector/InspectorController.cpp | 4 ++-- 2 files changed, 14 insertions(+), 2 deletions(-)
Dimitri Glazkov (Google)
Comment 4 2009-04-08 10:40:33 PDT
This was all my fault.
Dimitri Glazkov (Google)
Comment 5 2009-04-08 10:53:28 PDT
Note You need to log in before you can comment on or make changes to this bug.