2009-04-08  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Timothy Hatcher.

        https://bugs.webkit.org/show_bug.cgi?id=25093
        REGRESSION: some scripts are showing in the Inspector with only "true"
        as the source.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didParseSource): Fixed conversion issue.
        (WebCore::InspectorController::failedToParseSource): Ditto.

git-svn-id: svn://svn.chromium.org/blink/trunk@42325 bbb929c8-8fbe-4397-9dbb-9b2b20218538