third_party/WebKit/WebCore/inspector/InspectorController.cpp
@@ -1423,7 +1423,7 @@ void InspectorController::didParseSource(ExecState*, const SourceCode& source)
     ScriptFunctionCall function(m_scriptState, m_webInspector, "parsedScriptSource");
     function.appendArgument(static_cast<long long>(source.provider()->asID()));
     function.appendArgument(source.provider()->url());
-    function.appendArgument(source.data());
+    function.appendArgument(JSC::UString(source.data(), source.length()));
     function.appendArgument(source.firstLine());
     function.call();
 }
@@ -1432,7 +1432,7 @@ void InspectorController::failedToParseSource(ExecState*, const SourceCode& sour
 {
     ScriptFunctionCall function(m_scriptState, m_webInspector, "failedToParseScriptSource");
     function.appendArgument(source.provider()->url());
-    function.appendArgument(source.data());
+    function.appendArgument(JSC::UString(source.data(), source.length()));
     function.appendArgument(source.firstLine());
     function.appendArgument(errorLine);
     function.appendArgument(errorMessage);
